Начал верстать футер

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
     <img src="img/sedona-map.jpg" alt="sedona map" width="1200" height="593">
   </main>
-  <footer class="container">
+  <footer class="container main-footer clearfix">
     <section class="footer-tagname">
       <h2>#visitsedona</h2>
     </section>
