--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>City of Sedona</title>
 </head>
 <body>
-  <header class="container">
+  <header class="main-header container">
     <div class="logo">
       <img src="img/sedona-logo.png" alt="sedona logo" width="138" height="70">
     </div>
@@ -26,13 +26,13 @@
   </header>
   <main class="container">
     <div class="about">
-      <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </div>
     <div class="index-content">
       <div class="index-content-left">
-        <h2>Настоящий городок</h2>
-        <span>- №1 -</span>
+        <h2>Настоящий<br> городок</h2>
+        <span>— №1 —</span>
         <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <div class="index-content-right">
@@ -62,50 +62,50 @@
       </div>
       <div class="index-content-left">
         <h2>Там есть мост дьявола</h2>
-        <span>- №2 -</span>
+        <span>— №2 —</span>
         <p>Да , по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
     </div>
     <div class="index-content clearfix">
       <div class="index-content-reason">
         <h2>Небольшая площадь</h2>
-        <span>- №3 -</span>
+        <span>— №3 —</span>
         <p>Все достопримечательности находятся очень близко</p>
       </div>
       <div class="index-content-reason">
         <h2>Красивая дорога</h2>
-        <span>- №4 -</span>
+        <span>— №4 —</span>
         <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
       <div class="index-content-reason">
         <h2>Мало туристов</h2>
-        <span>- №5 -</span>
+        <span>— №5 —</span>
         <p>Большинство едет в Гранд Каньон и толпится там</p>
       </div>
     </div>
     <div class="search-form-title">
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <img src="img/sedona-map.jpg" alt="sedona map" width="1200" height="593">
+      <div class="search-form">
+        <form action="">
+          <h2>Поиск гостиницы в Седоне</h2>
+          <label for="calendar-in" class="search-form-label">
+            Дата заезда:
+          </label>
+          <input type="date" id="calendar-in" name="calendar-in" value="2016-08-24" max="2016-12-31" min="2016-08-24">
+          <label for="calendar-out" class="search-form-label">
+            Дата выезда:
+          </label>
+          <input type="date" id="calendar-out" name="calendar-out" value="2016-08-30" max="2016-12-31" min="2016-08-24">
+          Взрослые:
+          <input type="number" name="quantity" min="1" max="10" value="2">
+          Дети:
+          <input type="number" name="quantity" min="1" max="10" value="0">
+          <input type="submit" value="Найти">
+        </form>
+      </div>
     </div>
-    <div class="search-form">
-      <form action="">
-        <h2>Поиск гостиницы в Седоне</h2>
-        <label for="calendar-in" class="search-form-label">
-          Дата заезда:
-        </label>
-        <input type="date" id="calendar-in" name="calendar-in" value="2016-08-24" max="2016-12-31" min="2016-08-24">
-        <label for="calendar-out" class="search-form-label">
-          Дата выезда:
-        </label>
-        <input type="date" id="calendar-out" name="calendar-out" value="2016-08-30" max="2016-12-31" min="2016-08-24">
-        Взрослые:
-        <input type="number" name="quantity" min="1" max="10" value="2">
-        Дети:
-        <input type="number" name="quantity" min="1" max="10" value="0">
-        <input type="submit" value="Найти">
-      </form>
-    </div>
-    <img src="img/sedona-map.jpg" alt="sedona map" width="1200" height="593">
   </main>
   <footer class="container main-footer clearfix">
     <section class="footer-tagname">
