--- a/index.html
+++ b/index.html
@@ -29,57 +29,57 @@
       <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </div>
-    <div class="index-content">
-      <div class="index-content-left">
+    <div class="row clearfix">
+      <div class="col to-left">
         <h2>Настоящий<br> городок</h2>
-        <span>— №1 —</span>
+        <p>— №1 —</p>
         <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
       </div>
-      <div class="index-content-right">
+      <div class="to-right">
         <img src="img/sedona-reason01.jpg" alt="sedona" width="800" height="256">
       </div>
     </div>
-    <div class="promo">
-      <div class="promo-left">
+    <div class="promo clearfix">
+      <div class="col to-left">
         <img class="center" src="img/icon-house.png" alt="house" width="75" height="72">
         <h2>Жилье</h2>
         <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </div>
-      <div class="promo-center">
+      <div class="col to-left">
         <img class="center" src="img/icon-burger.png" alt="house" width="74" height="70">
         <h2>Еда</h2>
         <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </div>
-      <div class="promo-right">
+      <div class="col to-right">
         <img class="center" src="img/icon-gift.png" alt="house" width="64" height="76">
         <h2>Сувениры</h2>
         <p>Не только китайского, но и местного производства!lorem</p>
       </div>
     </div>
-    <div class="index-content">
-      <div class="index-content-right">
+    <div class="row clearfix">
+      <div class="to-left">
         <img src="img/sedona-reason02.jpg" alt="sedona" width="800" height="256">
       </div>
-      <div class="index-content-left">
-        <h2>Там есть мост дьявола</h2>
-        <span>— №2 —</span>
+      <div class="col to-right">
+        <h2>Там есть<br> мост дьявола</h2>
+        <p>— №2 —</p>
         <p>Да , по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
     </div>
-    <div class="index-content clearfix">
-      <div class="index-content-reason">
-        <h2>Небольшая площадь</h2>
-        <span>— №3 —</span>
+    <div class="row-gray clearfix">
+      <div class="col to-left">
+        <h2>Небольшая<br> площадь</h2>
+        <p>— №3 —</p>
         <p>Все достопримечательности находятся очень близко</p>
       </div>
-      <div class="index-content-reason">
-        <h2>Красивая дорога</h2>
-        <span>— №4 —</span>
+      <div class="col to-left">
+        <h2>Красивая<br> дорога</h2>
+        <p>— №4 —</p>
         <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
-      <div class="index-content-reason">
-        <h2>Мало туристов</h2>
-        <span>— №5 —</span>
+      <div class="col to-right">
+        <h2>Мало<br> туристов</h2>
+        <p>— №5 —</p>
         <p>Большинство едет в Гранд Каньон и толпится там</p>
       </div>
     </div>
@@ -88,20 +88,20 @@
       <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
       <img src="img/sedona-map.jpg" alt="sedona map" width="1200" height="593">
       <div class="search-form">
-        <form action="">
-          <h2>Поиск гостиницы в Седоне</h2>
-          <label for="calendar-in" class="search-form-label">
-            Дата заезда:
-          </label>
+        <h2>Поиск гостиницы в Седоне</h2>
+        <form method="post" action="#">
+          <label for="calendar-in" class="search-form-label">Дата заезда:</label>
           <input type="date" id="calendar-in" name="calendar-in" value="2016-08-24" max="2016-12-31" min="2016-08-24">
-          <label for="calendar-out" class="search-form-label">
-            Дата выезда:
-          </label>
+          <label for="calendar-out" class="search-form-label">Дата выезда:</label>
           <input type="date" id="calendar-out" name="calendar-out" value="2016-08-30" max="2016-12-31" min="2016-08-24">
-          Взрослые:
-          <input type="number" name="quantity" min="1" max="10" value="2">
-          Дети:
-          <input type="number" name="quantity" min="1" max="10" value="0">
+          <label for="adults" class="search-form-label">Взрослые:</labe>
+          <input class="count-btn" type="button" value="-">
+          <input id="adults" type="text" placeholder="2">
+          <input class="count-btn" type="button" value="+">
+          <label for="children" class="search-form-label">Дети:</labe>
+          <input class="count-btn" type="button" value="-">
+          <input id="children" type="text" placeholder="0">
+          <input class="count-btn" type="button" value="+">
           <input type="submit" value="Найти">
         </form>
       </div>
