--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <ul class="clearfix">
         <li class="to-left"><a href="#">Информация</a></li>
         <li class="to-left"><a href="#">Фото и видео</a></li>
-        <li class="to-right"><a href="#">Гостиницы</a></li>
+        <li class="to-right"><a href="catalog.html">Гостиницы</a></li>
         <li class="to-right"><a href="#">Карта штата</a></li>
       </ul>
     </nav>
-    <img src="img/sedona-header.jpg" alt="sedona" width="1200" height="509">
+    <img class="sedona-header" src="img/sedona-header.jpg" alt="sedona" width="1200" height="509">
   </header>
   <main class="container">
     <div class="about">
