начал верстать каталог

--- a/catalog.html
+++ b/catalog.html
@@ -26,8 +26,8 @@
     </nav>
   </header>
   <main class="container">
-    <div class="catalog-sort clearfix">
-      <fieldset class="catalog-sort-infrastructure to-left">
+    <div class="catalog-filter clearfix">
+      <fieldset class="catalog-filter-infrastructure to-left">
         <legend>Инфраструктура:</legend>
         <ul>
           <li>
@@ -44,7 +44,7 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="catalog-sort-house-type to-left">
+      <fieldset class="catalog-filter-house-type to-left">
         <legend>Тип жилья:</legend>
         <ul>
           <li>
@@ -61,10 +61,44 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="catalog-sort-price to-right">
+      <fieldset class="catalog-filter-price to-right">
         <legend>Стоимость в сутки (Р):</legend>
         <button class="sort-btn" type="submit">Показать</button>
       </fieldset>
+    </div>
+    <div class="catalog-sort">
+      <h2>Найдено: 2</h2>
+    </div>
+    <div class="catalog-offers">
+      <div class="catalog-item clearfix">
+        <div class="item-photo to-left">
+          <img src="img/item01.jpg" alt="hotel01" width="135px" height="90px">
+        </div>
+        <div class="item-info to-left">
+          <h2>Amara Resort & Spa</h2>
+        </div>
+        <div class="item-rating to-right">
+
+        </div>
+      </div>
+      <div class="catalog-item clearfix">
+        <div class="item-photo to-left">
+          <img src="img/item02.jpg" alt="hotel02" width="135px" height="90px">
+        </div>
+        <div class="item-info to-left">
+          <h2>Desert Quail & Inn</h2>
+        </div>
+
+      </div>
+      <div class="catalog-item clearfix">
+        <div class="item-photo to-left">
+          <img src="img/item03.jpg" alt="hotel03" width="135px" height="90px">
+        </div>
+        <div class="item-info to-left">
+          <h2>Villas At Pocco Diablo</h2>
+        </div>
+
+      </div>
     </div>
   </main>
   <footer class="main-footer container clearfix">
