--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               </div>
             </div>
             <div class="search-form-row">
-              <button class="blue-btn" type="submit">Найти</button>
+              <button class="big-blue-btn" type="submit">Найти</button>
             </div>
           </form>
         </div>
