--- a/catalog.html
+++ b/catalog.html
@@ -88,7 +88,7 @@
     <div class="catalog-offers">
       <div class="catalog-item clearfix">
         <div class="item-photo to-left">
-          <img src="img/item01.jpg" alt="hotel01" width="135px" height="90px">
+          <img src="img/item01.jpg" alt="hotel01" width="135" height="90">
         </div>
         <div class="item-info to-left">
           <div class="item-info-title">
@@ -115,7 +115,7 @@
       </div>
       <div class="catalog-item clearfix">
         <div class="item-photo to-left">
-          <img src="img/item02.jpg" alt="hotel02" width="135px" height="90px">
+          <img src="img/item02.jpg" alt="hotel02" width="135" height="90">
         </div>
         <div class="item-info to-left">
           <div class="item-info-title">
@@ -140,7 +140,7 @@
       </div>
       <div class="catalog-item clearfix">
         <div class="item-photo to-left">
-          <img src="img/item03.jpg" alt="hotel03" width="135px" height="90px">
+          <img src="img/item03.jpg" alt="hotel03" width="135" height="90">
         </div>
         <div class="item-info to-left">
           <div class="item-info-title">
@@ -166,7 +166,7 @@
       </div>
       <div class="catalog-item clearfix">
         <div class="item-photo to-left">
-          <img src="img/item01.jpg" alt="hotel01" width="135px" height="90px">
+          <img src="img/item01.jpg" alt="hotel01" width="135" height="90">
         </div>
         <div class="item-info to-left">
           <div class="item-info-title">
@@ -193,7 +193,7 @@
       </div>
       <div class="catalog-item clearfix">
         <div class="item-photo to-left">
-          <img src="img/item02.jpg" alt="hotel02" width="135px" height="90px">
+          <img src="img/item02.jpg" alt="hotel02" width="135" height="90">
         </div>
         <div class="item-info to-left">
           <div class="item-info-title">
@@ -218,7 +218,7 @@
       </div>
       <div class="catalog-item clearfix">
         <div class="item-photo to-left">
-          <img src="img/item03.jpg" alt="hotel03" width="135px" height="90px">
+          <img src="img/item03.jpg" alt="hotel03" width="135" height="90">
         </div>
         <div class="item-info to-left">
           <div class="item-info-title">
@@ -245,15 +245,15 @@
     </div>
   </main>
   <footer class="main-footer container clearfix">
-    <section class="footer-tagname to-left">
+    <div class="footer-tagname to-left">
       <h2>#visitsedona</h2>
-    </section>
-    <section class="footer-social to-left">
+    </div>
+    <div class="footer-social to-left">
       <a class="social-btn social-btn-tw" href="#"><i class="icon-twitter"></i>Твиттер</a>
       <a class="social-btn social-btn-fb" href="#"><i class="icon-facebook"></i>Фейсбук</a>
       <a class="social-btn social-btn-ytb" href="#"><i class="icon-youtube"></i>Ютуб</a>
-    </section>
-    <section class="footer-copyright to-right"></section>
+    </div>
+    <div class="footer-copyright to-right"></div>
   </footer>
   </body>
 </html>
