--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="search-form-row">
               <div class="search-form-half clearfix">
                 <div class="form-label to-left">
-                  <label for="adults">Взрослые:</labe>
+                  <label for="adults">Взрослые:</label>
                 </div>
                 <div class="to-right">
                   <button class="count-btn" type="button" value="-"><i class="icon-minus"></i></button>
@@ -137,7 +137,7 @@
               </div>
               <div class="search-form-half clearfix">
                 <div class="form-label to-left">
-                  <label for="children">Дети:</labe>
+                  <label for="children">Дети:</label>
                 </div>
                 <div class="search-form-half-right to-right">
                   <button class="count-btn" type="button" value="-"><i class="icon-minus"></i></button>
@@ -155,15 +155,15 @@
     </div>
   </main>
   <footer class="main-footer container clearfix">
-    <section class="footer-tagname to-left">
+    <div class="footer-tagname to-left">
       <h2>#visitsedona</h2>
-    </section>
-    <section class="footer-social to-left">
+    </div>
+    <div class="footer-social to-left">
       <a class="social-btn social-btn-tw" href="#"><i class="icon-twitter"></i>Твиттер</a>
       <a class="social-btn social-btn-fb" href="#"><i class="icon-facebook"></i>Фейсбук</a>
       <a class="social-btn social-btn-ytb" href="#"><i class="icon-youtube"></i>Ютуб</a>
-    </section>
-    <section class="footer-copyright to-right"></section>
+    </div>
+    <div class="footer-copyright to-right"></div>
   </footer>
   <script src="js/script.js"></script>
 </body>
